--- a/Project.Rmd
+++ b/Project.Rmd
@@ -32,6 +32,7 @@ library(nnSVG)
 library(MerfishData)
 library(ExperimentHub)
 library(scater)
+library(ggplot2)
 ```
 
 ```{r,include=FALSE}
@@ -40,8 +41,33 @@ library(scater)
 data<-Read10X(data.dir="./")
 # Renamed dataset to more straight forward name. 
 data2<-read.csv("merfish_all_cells.csv")
+```
+
+```{r,include=FALSE}
+df<-data2
+head(df)
+plotter<-function(df,ct=NULL){
+  df_filt<-df[df$Neuron_cluster_ID%in%ct,]
+  breg<-unique(df$Bregma)
+  lapply(breg,function(breg){
+    ggplot()+
+      geom_point(data=df,aes(x=Centroid_X,y=Centroid_Y))+
+      labs(title=paste("Bregma Level:", breg),
+           x="Centroid X",
+           y="Centroid Y")
+    if(!is.null(ct)){
+      pt<-pt+
+        geom_point(data=df_filt[df_filt$Bregma==breg,],
+                   aes(x=Centroid_X,y=Centroid_Y,color=Neuron_cluster_ID))
+    }
+    pt
+  })
+}
+plotter(df)
+```
 
 
+```{r,include=FALSE}
 data22<-data2#[!apply(data2,1,function(x) any(is.na(x))),]
 #Need to remove NAs if we want to run logNormCounts() to calculate PCA. Otherwise, not needed.
 #Removing NAs will reduce the unique Bregma to 4 from 12
