--- a/Project.Rmd
+++ b/Project.Rmd
@@ -15,7 +15,83 @@ header-includes:
 
 \newpage
 
-### Most likely will not need all these packages. 
+
+```{r,include=FALSE}
+library(tidyverse)
+library(gridExtra)
+# Renamed dataset to more straight forward name. 
+df<-read.csv("merfish_all_cells.csv")
+
+plotter<-function(df,ct=NULL,Animal_ID=NULL){
+  df_filt<-df[df$Neuron_cluster_ID%in%ct,]
+  
+  if(!is.null(Animal_ID)){
+    df<-df[df$Animal_ID%in%Animal_ID,]
+    df_filt<-df_filt[df_filt$Animal_ID%in%Animal_ID,]
+  }
+  
+  breg<-unique(df$Bregma)
+  animals<-unique(df$Animal_ID)
+  
+  lapply(animals,function(animal){
+    lapply(breg,function(breg){
+      pt<-ggplot()+
+        geom_point(data=df[df$Bregma==breg&df$Animal_ID==animal,],
+                   aes(x=Centroid_X,y=Centroid_Y,color=Cell_class),alpha=0.25)+
+        labs(title=paste("BregmaLevel:",breg,"AnimalID:",animal),
+             x="CentroidX",
+             y="CentroidY")
+      
+      if(!is.null(ct)){
+        pt<-pt+
+          geom_point(data=df_filt[df_filt$Bregma==breg&df_filt$Animal_ID==animal,],
+                     aes(x=Centroid_X,y=Centroid_Y,
+                         shape=as.factor(Neuron_cluster_ID)),color="black")+
+          scale_shape_manual(values=seq(2,2+length(ct),1))+
+          guides(color=guide_legend(title="CellClass",ncol=1),
+                 shape=guide_legend(title="Cluster",ncol=1,
+                                    override.aes=list(alpha=1)))+
+          theme(legend.position="right",
+                legend.box="horizontal",
+                legend.box.just="left")
+        }
+      pt
+      })
+  })
+}
+#Example of plotter function. Modify the cluster ("I-5","I-6","I-9") to any cluster you want to look at. The last argument (18) means the 18th mouse. Modify that number to look at other mouse. 
+plotter(df,c("I-5","I-6","I-9"),18)
+
+#Function to save the graphics as png. Change the first argument ("combined_plot.png") into the name you want. Inside, change (plotter(df,c("I-5","I-6","I-9"),18)) argument to change it to the cluster and mouse you want. 
+ggsave("combined_plot.png",
+       grid.arrange(grobs=do.call(c,plotter(df,c("I-5","I-6","I-9"),18)),ncol=2),
+       width=15,height=10,units="in")
+```
+
+```{r}
+#If you want to see which cluster there are, run the following code
+unique(df$Neuron_cluster_ID)
+#If you want to see which ID corresponds to which behavior, run the following code
+df%>%
+  group_by(Behavior)%>%
+  summarize(id=unique(Animal_ID))
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+--- 
+
+# Outdated. Reference purpose only. 
 
 ```{r,include=FALSE}
 #All the codes below will not show up on the knitted pdf document. 
@@ -45,15 +121,13 @@ data<-Read10X(data.dir="./")
 data2<-read.csv("merfish_all_cells.csv")
 ```
 
-### Tried other method to plot. Recommended.  
-
 ```{r,include=FALSE}
 df<-data2
 #Subset function. Examples below. 
 subsetdf<-function(df=df,b){
   df[df$Behavior%in%b,]
 }
-#Function to plot. Only df and cluster list needed. If you do not want to create cluster highlight, disregard cluster argument and leave it blank. 
+# Function to plot. Only df and cluster list needed. If you do not want to create cluster highlight, disregard cluster argument and leave it blank.
 plotter<-function(df,ct = NULL){
   df_filt<-df[df$Neuron_cluster_ID%in%ct,]
   breg<-unique(df$Bregma)
@@ -70,27 +144,18 @@ plotter<-function(df,ct = NULL){
     }
     pt
   })
-}
+} #Old function. Disregard. For educational purpose only. 
+
 #Examples of subset function. df1 will subset using behavior equals parentings, and df2 will subset using mating. 
 df1<-subsetdf(df,c("Parenting","Virgin Parenting"))
 df2<-subsetdf(df,"Mating")
 #Randomly chosen clusters. May not be relavant. 
-plotter(df1,c("I-5","I-6","I-9"))
+plotter(df,c("I-5","I-6","I-9"),18)
 plotter(df2,c("I-5","I-6","I-9"))
 
-plot_grid(plotlist=plotter(df1,c("I-5","I-6","I-9")),ncol=2)
+plot_grid(plotlist=plotter(df,c("I-5","I-6","I-9"),18),ncol=2)
 plot_grid(plotlist=plotter(df2,c("I-5","I-6","I-9")),ncol=2)
 ```
-
-
-
-
-
-
-
-## Old Data
-
-### Created Seurat and Spatial Data for both data. 
 
 ```{r,include=FALSE}
 data22<-data2#[!apply(data2,1,function(x) any(is.na(x))),]
