--- a/Project.Rmd
+++ b/Project.Rmd
@@ -16,73 +16,6 @@ header-includes:
 \newpage
 
 
-```{r,include=FALSE}
-library(tidyverse)
-library(gridExtra)
-library(png)
-library(grid)
-# Renamed dataset to more straight forward name. 
-df<-read.csv("merfish_all_cells.csv")
-
-plotter<-function(df,ct=NULL,Animal_ID=NULL){
-  df_filt<-df[df$Neuron_cluster_ID%in%ct,]
-  if(!is.null(Animal_ID)){
-    df<-df[df$Animal_ID%in%Animal_ID,]
-    df_filt<-df_filt[df_filt$Animal_ID%in%Animal_ID,]
-  }
-  
-  breg<-unique(df$Bregma)
-  animals<-unique(df$Animal_ID)
-  
-  lapply(animals,function(animal){
-    lapply(breg,function(breg){
-      sex<-df[df$Animal_ID==animal,"Animal_sex"][1]
-      behav<-df[df$Animal_ID==animal,"Behavior"][1]
-      pt<-ggplot()+
-        geom_point(data=df[df$Bregma==breg&df$Animal_ID==animal,],
-                   shape=20,
-                   aes(x=Centroid_X,y=Centroid_Y,color=Cell_class),alpha=0.50)+
-        labs(x="CentroidX",
-             y="CentroidY")+
-        ggtitle(paste("Level:",breg,"\nAnimalID:",animal,"Sex:",sex,"Behavior:",behav))+
-        theme(plot.title=element_text(size=10,face="bold"))
-      
-      if(!is.null(ct)){
-        pt<-pt+
-          geom_point(data=df_filt[df_filt$Bregma==breg&df_filt$Animal_ID==animal,],
-                     aes(x=Centroid_X,y=Centroid_Y,
-                         shape=as.factor(Neuron_cluster_ID)),color="black")+
-          scale_shape_manual(values=seq(2,2+length(ct),1))+
-          guides(color=guide_legend(title="CellClass",ncol=1),
-                 shape=guide_legend(title="Cluster",ncol=1,
-                                    override.aes=list(alpha=1)))+
-          theme(legend.position="right",
-                legend.box="horizontal",
-                legend.box.just="left")
-        }
-      pt
-      })
-  })
-}
-#Example of plotter function. Modify the cluster ("I-5","I-6","I-9") to any cluster you want to look at. The last argument (18) means the 18th mouse. Modify that number to look at other mouse. 
-plotter(df,c("I-5","I-6","I-9"),18)
-
-#Function to save the graphics as png. Change the first argument ("combined_plot.png") into the name you want. Inside, change (plotter(df,c("I-5","I-6","I-9"),18)) argument to change it to the cluster and mouse you want. 
-ggsave("combined_plot.png",
-       grid.arrange(grobs=do.call(c,plotter(df,c("I-5","I-6","I-9"),18)),ncol=2),
-       width=15,height=10,units="in")
-```
-
-```{r,include=FALSE}
-#If you want to see which cluster there are, run the following code
-unique(df$Neuron_cluster_ID)
-#If you want to see which ID corresponds to which behavior, run the following code
-df%>%
-  group_by(Behavior)%>%
-  summarize(id=unique(Animal_ID))
-#head(df)
-```
-
 # Abstract
 
 
@@ -101,13 +34,10 @@ df%>%
 
 # Figures
 
-```{r,echo=FALSE}
-plotter(df,c("I-5","I-6","I-9"),18)
+```{r,include=FALSE}
+library(knitr)
 ```
-
-
-
-
-
-
+```{r,echo=FALSE,out.width='100%',fig.cap="Fig 1: CCK Plot"}
+include_graphics("./plots/CCK.png")
+```
 
